# VINS-Fusion

./: README.md  dependencies.md  package.yaml
config/kitti_odom/: kitti_config00-02.yaml
vins_estimator/: CMakeLists.txt
vins_estimator/src/: KITTIOdomTest.cpp  nodes.cpp  vins_estimator_node.hpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  marginalization_factor.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp
